trivial: center the prefs UI when it is initially shown

--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -5,6 +5,7 @@
   <object class="GtkDialog" id="dialog_prefs">
     <property name="border_width">5</property>
     <property name="title" translatable="yes">Color Management</property>
+    <property name="window_position">center</property>
     <property name="icon_name">preferences-system</property>
     <property name="type_hint">normal</property>
     <property name="has_separator">False</property>
