--- a/data/gcm-picker.ui
+++ b/data/gcm-picker.ui
@@ -232,6 +232,49 @@
                         <property name="position">3</property>
                       </packing>
                     </child>
+                    <child>
+                      <object class="GtkHBox" id="hbox_error">
+                        <property name="visible">True</property>
+                        <property name="spacing">12</property>
+                        <child>
+                          <object class="GtkHBox" id="hbox_error_align">
+                            <property name="visible">True</property>
+                            <child>
+                              <object class="GtkLabel" id="label_error_title">
+                                <property name="visible">True</property>
+                                <property name="label" translatable="yes" comments="This shows the error in the conversion to RGB.">Error:</property>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="fill">False</property>
+                                <property name="position">0</property>
+                              </packing>
+                            </child>
+                          </object>
+                          <packing>
+                            <property name="expand">False</property>
+                            <property name="fill">False</property>
+                            <property name="position">0</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkLabel" id="label_error">
+                            <property name="visible">True</property>
+                            <property name="selectable">True</property>
+                          </object>
+                          <packing>
+                            <property name="expand">False</property>
+                            <property name="fill">False</property>
+                            <property name="position">1</property>
+                          </packing>
+                        </child>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">False</property>
+                        <property name="position">4</property>
+                      </packing>
+                    </child>
                   </object>
                 </child>
                 <child type="label">
@@ -303,10 +346,11 @@
   </object>
   <object class="GtkSizeGroup" id="sizegroup_titles">
     <widgets>
-      <widget name="hbox_rgb_align"/>
-      <widget name="hbox_colorspace_align"/>
       <widget name="hbox_xyz_align"/>
       <widget name="hbox_lab_align"/>
+      <widget name="hbox_colorspace_align"/>
+      <widget name="hbox_rgb_align"/>
+      <widget name="hbox_error_align"/>
     </widgets>
   </object>
 </interface>
