--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -378,6 +378,54 @@
                                           </packing>
                                         </child>
                                         <child>
+                                          <object class="GtkHBox" id="hbox_eisa">
+                                            <property name="visible">True</property>
+                                            <property name="spacing">12</property>
+                                            <child>
+                                              <object class="GtkHBox" id="hbox53">
+                                                <property name="visible">True</property>
+                                                <child>
+                                                  <object class="GtkLabel" id="label_title_eisa">
+                                                    <property name="visible">True</property>
+                                                    <property name="label" translatable="yes" comments="The EISA (standards body) identifier of the device">EISA ID:</property>
+                                                  </object>
+                                                  <packing>
+                                                    <property name="expand">False</property>
+                                                    <property name="position">0</property>
+                                                  </packing>
+                                                </child>
+                                              </object>
+                                              <packing>
+                                                <property name="expand">False</property>
+                                                <property name="position">0</property>
+                                              </packing>
+                                            </child>
+                                            <child>
+                                              <object class="GtkHBox" id="hbox54">
+                                                <property name="visible">True</property>
+                                                <child>
+                                                  <object class="GtkLabel" id="label_eisa">
+                                                    <property name="visible">True</property>
+                                                    <property name="label">eisa-id</property>
+                                                    <property name="selectable">True</property>
+                                                  </object>
+                                                  <packing>
+                                                    <property name="expand">False</property>
+                                                    <property name="position">0</property>
+                                                  </packing>
+                                                </child>
+                                              </object>
+                                              <packing>
+                                                <property name="position">1</property>
+                                              </packing>
+                                            </child>
+                                          </object>
+                                          <packing>
+                                            <property name="padding">3</property>
+                                            <property name="position">3</property>
+                                          </packing>
+                                        </child>
+                                        <child>
                                           <object class="GtkHBox" id="hbox3">
                                             <property name="visible">True</property>
                                             <child>
@@ -393,7 +441,7 @@
                                             </child>
                                           </object>
                                           <packing>
-                                            <property name="position">3</property>
+                                            <property name="position">4</property>
                                           </packing>
                                         </child>
                                       </object>
@@ -1953,44 +2001,45 @@
   </object>
   <object class="GtkSizeGroup" id="sizegroup_lists">
     <widgets>
-      <widget name="scrolledwindow2"/>
       <widget name="scrolledwindow1"/>
+      <widget name="scrolledwindow2"/>
     </widgets>
   </object>
   <object class="GtkSizeGroup" id="sizegroup_defaults">
     <widgets>
-      <widget name="hbox17"/>
-      <widget name="hbox15"/>
-      <widget name="hbox46"/>
       <widget name="hbox43"/>
+      <widget name="hbox46"/>
+      <widget name="hbox15"/>
+      <widget name="hbox17"/>
     </widgets>
   </object>
   <object class="GtkSizeGroup" id="sizegroup_devices">
     <widgets>
-      <widget name="hbox23"/>
-      <widget name="hbox22"/>
       <widget name="hbox21"/>
+      <widget name="hbox22"/>
+      <widget name="hbox23"/>
+      <widget name="hbox53"/>
     </widgets>
   </object>
   <object class="GtkSizeGroup" id="sizegroup_profiles">
     <widgets>
-      <widget name="hbox33"/>
-      <widget name="hbox31"/>
-      <widget name="hbox12"/>
-      <widget name="hbox48"/>
-      <widget name="hbox34"/>
-      <widget name="hbox10"/>
-      <widget name="hbox36"/>
-      <widget name="hbox39"/>
       <widget name="hbox6"/>
+      <widget name="hbox39"/>
+      <widget name="hbox36"/>
+      <widget name="hbox10"/>
+      <widget name="hbox34"/>
+      <widget name="hbox48"/>
+      <widget name="hbox12"/>
+      <widget name="hbox31"/>
+      <widget name="hbox33"/>
     </widgets>
   </object>
   <object class="GtkSizeGroup" id="sizegroup_combos">
     <widgets>
-      <widget name="combobox_space_rgb"/>
-      <widget name="combobox_space_cmyk"/>
-      <widget name="combobox_rendering_display"/>
       <widget name="combobox_rendering_softproof"/>
+      <widget name="combobox_rendering_display"/>
+      <widget name="combobox_space_cmyk"/>
+      <widget name="combobox_space_rgb"/>
     </widgets>
   </object>
 </interface>
