--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -1778,7 +1778,7 @@
           <object class="GtkVBox" id="vbox1">
             <property name="visible">True</property>
             <property name="orientation">vertical</property>
-            <property name="spacing">6</property>
+            <property name="spacing">9</property>
             <child>
               <object class="GtkTable" id="table2">
                 <property name="visible">True</property>
@@ -1890,6 +1890,47 @@
               </packing>
             </child>
             <child>
+              <object class="GtkHBox" id="hbox_virtual_info">
+                <property name="visible">True</property>
+                <property name="spacing">12</property>
+                <child>
+                  <object class="GtkImage" id="image1">
+                    <property name="visible">True</property>
+                    <property name="stock">gtk-dialog-info</property>
+                    <property name="icon-size">6</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="position">0</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkHBox" id="hbox56">
+                    <property name="visible">True</property>
+                    <child>
+                      <object class="GtkLabel" id="label_virtual_info">
+                        <property name="visible">True</property>
+                        <property name="label" translatable="yes">Image files can be dragged on this window to auto-complete the above fields.</property>
+                        <property name="wrap">True</property>
+                      </object>
+                      <packing>
+                        <property name="position">0</property>
+                      </packing>
+                    </child>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="position">1</property>
+                  </packing>
+                </child>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
+                <property name="position">1</property>
+              </packing>
+            </child>
+            <child>
               <object class="GtkExpander" id="expander1">
                 <property name="visible">True</property>
                 <property name="sensitive">False</property>
@@ -1945,7 +1986,7 @@
                 </child>
               </object>
               <packing>
-                <property name="position">1</property>
+                <property name="position">2</property>
               </packing>
             </child>
           </object>
@@ -2001,45 +2042,45 @@
   </object>
   <object class="GtkSizeGroup" id="sizegroup_lists">
     <widgets>
-      <widget name="scrolledwindow1"/>
       <widget name="scrolledwindow2"/>
+      <widget name="scrolledwindow1"/>
     </widgets>
   </object>
   <object class="GtkSizeGroup" id="sizegroup_defaults">
     <widgets>
-      <widget name="hbox43"/>
-      <widget name="hbox46"/>
-      <widget name="hbox15"/>
       <widget name="hbox17"/>
+      <widget name="hbox15"/>
+      <widget name="hbox46"/>
+      <widget name="hbox43"/>
     </widgets>
   </object>
   <object class="GtkSizeGroup" id="sizegroup_devices">
     <widgets>
-      <widget name="hbox21"/>
-      <widget name="hbox22"/>
-      <widget name="hbox23"/>
       <widget name="hbox53"/>
+      <widget name="hbox23"/>
+      <widget name="hbox22"/>
+      <widget name="hbox21"/>
     </widgets>
   </object>
   <object class="GtkSizeGroup" id="sizegroup_profiles">
     <widgets>
-      <widget name="hbox6"/>
-      <widget name="hbox39"/>
-      <widget name="hbox36"/>
-      <widget name="hbox10"/>
-      <widget name="hbox34"/>
-      <widget name="hbox48"/>
-      <widget name="hbox12"/>
-      <widget name="hbox31"/>
       <widget name="hbox33"/>
+      <widget name="hbox31"/>
+      <widget name="hbox12"/>
+      <widget name="hbox48"/>
+      <widget name="hbox34"/>
+      <widget name="hbox10"/>
+      <widget name="hbox36"/>
+      <widget name="hbox39"/>
+      <widget name="hbox6"/>
     </widgets>
   </object>
   <object class="GtkSizeGroup" id="sizegroup_combos">
     <widgets>
-      <widget name="combobox_rendering_softproof"/>
-      <widget name="combobox_rendering_display"/>
-      <widget name="combobox_space_cmyk"/>
       <widget name="combobox_space_rgb"/>
+      <widget name="combobox_space_cmyk"/>
+      <widget name="combobox_rendering_display"/>
+      <widget name="combobox_rendering_softproof"/>
     </widgets>
   </object>
 </interface>
