trivial: top align the graphs expander

--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -1250,6 +1250,7 @@
                                 </child>
                               </object>
                               <packing>
+                                <property name="expand">False</property>
                                 <property name="position">0</property>
                               </packing>
                             </child>
