trivial: Set up the window modality in the GtkBuilder file not the C file

--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -1763,12 +1763,16 @@
   </object>
   <object class="GtkDialog" id="dialog_virtual">
     <property name="border_width">5</property>
-    <property name="title" translatable="yes">Add Virtual Device</property>
+    <property name="title"> </property>
     <property name="resizable">False</property>
     <property name="modal">True</property>
     <property name="window_position">center-on-parent</property>
     <property name="destroy_with_parent">True</property>
-    <property name="type_hint">normal</property>
+    <property name="icon_name">gnome-color-manager</property>
+    <property name="type_hint">dialog</property>
+    <property name="skip_taskbar_hint">True</property>
+    <property name="skip_pager_hint">True</property>
+    <property name="transient_for">dialog_prefs</property>
     <property name="has_separator">False</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox2">
