trivial: Make the virtual device buttons explicity 'devices' to avoid confusion

--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -62,7 +62,7 @@
                                 <property name="spacing">6</property>
                                 <child>
                                   <object class="GtkButton" id="button_device_add">
-                                    <property name="label" translatable="yes" comments="This is a button to add a virtual device">_Add&#x2026;</property>
+                                    <property name="label" translatable="yes" comments="This is a button to add a virtual device">_Add device&#x2026;</property>
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">True</property>
@@ -77,7 +77,7 @@
                                 </child>
                                 <child>
                                   <object class="GtkButton" id="button_delete">
-                                    <property name="label" translatable="yes" comments="This is a button to delete the saved or virtual device">Remove</property>
+                                    <property name="label" translatable="yes" comments="This is a button to delete the saved or virtual device">Remove device</property>
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">True</property>
